--- a/editar-transporte.html
+++ b/editar-transporte.html
@@ -92,7 +92,7 @@
                                                                                 <label for="cnh"><strong>CNH</strong><br></label><input class="form-control" type="text" id="cnh" placeholder="" name="CNH">
                                                                                 <label for="placa"><strong>Placa</strong></label><input class="form-control" type="text" id="placa" placeholder="" name="nome-motorista">
                                                                             </div>
-                                                                    <div class="col-auto"><i class="fas fa-smile fa-2x text-gray-300"></i></div>
+                                                                    <!-- <div class="col-auto"></div> -->
                                                                 </div>
                                                             </div>
                                                             <div ><button class="btn btn-primary add-new" type="button" id="btnSalvarTransporte" onclick="cadastrar()">Salvar</button></div>
